# perpetua-core

./: .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml
docs/: PROGRESS.md
perpetua_core/: __init__.py  llm.py  state.py
perpetua_core/config/: model_hardware_policy.example.yml
perpetua_core/discovery/: registry.py  selector.py
perpetua_core/graph/: engine.py
perpetua_core/graph/plugins/: __init__.py  interrupt_guard.py  parallel.py  tool_node.py
src/perpetua_core/: gossip.py  message.py  policy.py
src/perpetua_core/discovery/: __init__.py  backend.py  errors.py  probe.py
src/perpetua_core/graph/: __init__.py  engine.py
src/perpetua_core/graph/plugins/: checkpointer.py  interrupts.py  routing.py  streaming.py  structured_output.py  subgraphs.py  tool.py  validator.py
src/tests/: test_minigraph.py  test_plugins_interrupts.py  test_plugins_tool.py  test_state.py
src/tests/graph/: test_engine_max_steps.py
src/tests/graph/plugins/: test_interrupt_guard.py  test_routing.py  test_tool_node.py  test_validator.py
tests/: test_discovery_adapter.py  test_discovery_selector.py  test_message.py  test_plugins_checkpointer.py  test_policy.py
tests/graph/: test_engine_compile.py
tests/graph/plugins/: test_parallel.py
tests/property/: test_engine_invariants.py
