[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perpetua-core"
version = "2.0.0-alpha.1"
description = "Hardware-aware local-first LLM orchestration kernel"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["perpetua_core"]
